// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A FieldSelect 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  border-radius: 0.25rem;
  border: solid 1px;
  border-color: #DEE1E5;
  width: 100%;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-right: 0.25rem;
  font-size: 0.875rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  color: #343C42;
  margin-right: 0.5rem;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c8 {
  height: 36px;
}

.c8:hover {
  border-color: #C1C6CC;
}

.c8:focus,
.c8:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c10 {
  border-radius: 0.25rem;
  border: solid 1px;
  border-color: #DEE1E5;
  height: 36px;
  padding-right: 0.75rem;
  padding-left: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
}

.c10:focus {
  outline: none;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
}

.c6:hover {
  border-color: #C1C6CC;
}

.c6:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c6 .c9 {
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  box-shadow: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
  height: calc(36px - 6px);
}

.c6 .c9::-webkit-search-decoration,
.c6 .c9::-webkit-search-cancel-button,
.c6 .c9::-webkit-search-results-button,
.c6 .c9::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1 .c9 {
  width: 100%;
}

.c1 {
  width: 100%;
}

.c7 {
  background-image: url('data:image/svg+xml;base64,CjxzdmcKICB3aWR0aD0iMjQiCiAgaGVpZ2h0PSIyNCIKICB2aWV3Qm94PSIwIDAgMjQgMjQiCiAgZmlsbD0ibm9uZSIKICB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciCj4KICA8cGF0aAogICAgZD0iTTcuNDEgOC41ODk4NEwxMiAxMy4xNjk4TDE2LjU5IDguNTg5ODRMMTggOS45OTk4NEwxMiAxNS45OTk4TDYgOS45OTk4NEw3LjQxIDguNTg5ODRaIgogICAgZmlsbD0iIzcwNzc4MSIKICAvPgo8L3N2Zz4=');
  background-repeat: no-repeat,repeat;
  background-position: right .5rem top calc(.5rem + 2px),0 0;
  background-size: 1rem,100%;
  padding-right: calc(2 * .5rem + 1rem);
}

.c7 .c9 {
  cursor: default;
}

.c7 .c11::after {
  content: ' ';
  border-right: 1px solid #DEE1E5;
  height: 1.5rem;
  width: 0.5rem;
  pointer-events: none;
}

<div
  className="c0 c1 "
>
  <div
    className="c2"
  >
    <label
      className="c3"
      color="palette.charcoal700"
      fontSize="xsmall"
      fontWeight="semiBold"
      htmlFor="thumbs-up"
    >
      👍
    </label>
  </div>
  <div
    className="c0"
  >
    <div
      className=""
    >
      <div
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-owns="listbox-thumbs-up"
        className="c4 "
        display="flex"
        id="thumbs-up"
        name="thumbsUp"
        role="combobox"
      >
        <div
          className="c5 c6 c7"
          fontSize="small"
          onClick={[Function]}
          onMouseDown={[Function]}
          width="100%"
        >
          <input
            aria-autocomplete="both"
            autoComplete="off"
            className="c8 c9 c10"
            id="listbox-thumbs-up"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            readOnly={true}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`A FieldSelect with an error validation aligned to the left 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  border-radius: 0.25rem;
  border: solid 1px;
  border-color: #DEE1E5;
  width: 100%;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-right: 0.25rem;
  font-size: 0.875rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c3 {
  color: #343C42;
  margin-right: 0.5rem;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c12 {
  color: #CC1F36;
  margin-right: 0.5rem;
  margin-top: 0.5rem;
  font-size: 0.75rem;
}

.c9 {
  height: 36px;
}

.c9:hover {
  border-color: #C1C6CC;
}

.c9:focus,
.c9:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c11 {
  border-radius: 0.25rem;
  border: solid 1px;
  border-color: #DEE1E5;
  height: 36px;
  padding-right: 0.75rem;
  padding-left: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
}

.c11:focus {
  outline: none;
}

.c13 .c10 {
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  box-shadow: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
  height: calc(36px - 6px);
}

.c13 .c10::-webkit-search-decoration,
.c13 .c10::-webkit-search-cancel-button,
.c13 .c10::-webkit-search-results-button,
.c13 .c10::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-color: #ED3B53;
}

.c7:hover {
  border-color: #C1C6CC;
}

.c7:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c7:hover {
  border-color: #CC1F36;
}

.c7:focus,
.c7:focus-within {
  border-color: #CC1F36;
  box-shadow: 0 0 0 2px #FFE5E9;
}

.c7 .c10 {
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  box-shadow: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
  height: calc(36px - 6px);
}

.c7 .c10::-webkit-search-decoration,
.c7 .c10::-webkit-search-cancel-button,
.c7 .c10::-webkit-search-results-button,
.c7 .c10::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1 .c10 {
  width: 100%;
}

.c1 {
  width: 100%;
}

.c8 {
  background-image: url('data:image/svg+xml;base64,CjxzdmcKICB3aWR0aD0iMjQiCiAgaGVpZ2h0PSIyNCIKICB2aWV3Qm94PSIwIDAgMjQgMjQiCiAgZmlsbD0ibm9uZSIKICB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciCj4KICA8cGF0aAogICAgZD0iTTcuNDEgOC41ODk4NEwxMiAxMy4xNjk4TDE2LjU5IDguNTg5ODRMMTggOS45OTk4NEwxMiAxNS45OTk4TDYgOS45OTk4NEw3LjQxIDguNTg5ODRaIgogICAgZmlsbD0iIzcwNzc4MSIKICAvPgo8L3N2Zz4=');
  background-repeat: no-repeat,repeat;
  background-position: right .5rem top calc(.5rem + 2px),0 0;
  background-size: 1rem,100%;
  padding-right: calc(2 * .5rem + 1rem);
}

.c8 .c10 {
  cursor: default;
}

.c8 .c14::after {
  content: ' ';
  border-right: 1px solid #DEE1E5;
  height: 1.5rem;
  width: 0.5rem;
  pointer-events: none;
}

<div
  className="c0 c1 "
>
  <div
    className="c2"
  >
    <label
      className="c3"
      color="palette.charcoal700"
      fontSize="xsmall"
      fontWeight="semiBold"
      htmlFor="thumbs-up"
    >
      👍
    </label>
  </div>
  <div
    className="c4"
  >
    <div
      className=""
    >
      <div
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-owns="listbox-thumbs-up"
        className="c5 "
        display="flex"
        id="thumbs-up"
        name="thumbsUp"
        role="combobox"
      >
        <div
          className="c6 c7 c8"
          fontSize="small"
          onClick={[Function]}
          onMouseDown={[Function]}
          width="100%"
        >
          <input
            aria-autocomplete="both"
            autoComplete="off"
            className="c9 c10 c11"
            id="listbox-thumbs-up"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            readOnly={true}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      className="c12"
      fontSize="xsmall"
      type="error"
    >
      This is an error
    </div>
  </div>
</div>
`;

exports[`A FieldSelect with an error validation aligned to the right 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  border-radius: 0.25rem;
  border: solid 1px;
  border-color: #DEE1E5;
  width: 100%;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-right: 0.25rem;
  font-size: 0.875rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c3 {
  color: #343C42;
  margin-right: 0.5rem;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c12 {
  color: #CC1F36;
  margin-right: 0.5rem;
  margin-top: 0.5rem;
  margin-left: 0.5rem;
  font-size: 0.75rem;
}

.c9 {
  height: 36px;
}

.c9:hover {
  border-color: #C1C6CC;
}

.c9:focus,
.c9:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c11 {
  border-radius: 0.25rem;
  border: solid 1px;
  border-color: #DEE1E5;
  height: 36px;
  padding-right: 0.75rem;
  padding-left: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
}

.c11:focus {
  outline: none;
}

.c13 .c10 {
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  box-shadow: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
  height: calc(36px - 6px);
}

.c13 .c10::-webkit-search-decoration,
.c13 .c10::-webkit-search-cancel-button,
.c13 .c10::-webkit-search-results-button,
.c13 .c10::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-color: #ED3B53;
}

.c7:hover {
  border-color: #C1C6CC;
}

.c7:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c7:hover {
  border-color: #CC1F36;
}

.c7:focus,
.c7:focus-within {
  border-color: #CC1F36;
  box-shadow: 0 0 0 2px #FFE5E9;
}

.c7 .c10 {
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  box-shadow: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
  height: calc(36px - 6px);
}

.c7 .c10::-webkit-search-decoration,
.c7 .c10::-webkit-search-cancel-button,
.c7 .c10::-webkit-search-results-button,
.c7 .c10::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1 .c10 {
  width: 100%;
}

.c1 {
  width: 100%;
}

.c8 {
  background-image: url('data:image/svg+xml;base64,CjxzdmcKICB3aWR0aD0iMjQiCiAgaGVpZ2h0PSIyNCIKICB2aWV3Qm94PSIwIDAgMjQgMjQiCiAgZmlsbD0ibm9uZSIKICB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciCj4KICA8cGF0aAogICAgZD0iTTcuNDEgOC41ODk4NEwxMiAxMy4xNjk4TDE2LjU5IDguNTg5ODRMMTggOS45OTk4NEwxMiAxNS45OTk4TDYgOS45OTk4NEw3LjQxIDguNTg5ODRaIgogICAgZmlsbD0iIzcwNzc4MSIKICAvPgo8L3N2Zz4=');
  background-repeat: no-repeat,repeat;
  background-position: right .5rem top calc(.5rem + 2px),0 0;
  background-size: 1rem,100%;
  padding-right: calc(2 * .5rem + 1rem);
}

.c8 .c10 {
  cursor: default;
}

.c8 .c14::after {
  content: ' ';
  border-right: 1px solid #DEE1E5;
  height: 1.5rem;
  width: 0.5rem;
  pointer-events: none;
}

<div
  className="c0 c1 "
>
  <div
    className="c2"
  >
    <label
      className="c3"
      color="palette.charcoal700"
      fontSize="xsmall"
      fontWeight="semiBold"
      htmlFor="thumbs-up"
    >
      👍
    </label>
  </div>
  <div
    className="c4"
  >
    <div
      className=""
    >
      <div
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-owns="listbox-thumbs-up"
        className="c5 "
        display="flex"
        id="thumbs-up"
        name="thumbsUp"
        role="combobox"
      >
        <div
          className="c6 c7 c8"
          fontSize="small"
          onClick={[Function]}
          onMouseDown={[Function]}
          width="100%"
        >
          <input
            aria-autocomplete="both"
            autoComplete="off"
            className="c9 c10 c11"
            id="listbox-thumbs-up"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            readOnly={true}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      className="c12"
      fontSize="xsmall"
      type="error"
    >
      This is an error
    </div>
  </div>
</div>
`;

exports[`A required FieldSelect 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  border-radius: 0.25rem;
  border: solid 1px;
  border-color: #DEE1E5;
  width: 100%;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-right: 0.25rem;
  font-size: 0.875rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  color: #343C42;
  margin-right: 0.5rem;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c9 {
  height: 36px;
}

.c9:hover {
  border-color: #C1C6CC;
}

.c9:focus,
.c9:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c11 {
  border-radius: 0.25rem;
  border: solid 1px;
  border-color: #DEE1E5;
  height: 36px;
  padding-right: 0.75rem;
  padding-left: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
}

.c11:focus {
  outline: none;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
}

.c7:hover {
  border-color: #C1C6CC;
}

.c7:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c7 .c10 {
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  box-shadow: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
  height: calc(36px - 6px);
}

.c7 .c10::-webkit-search-decoration,
.c7 .c10::-webkit-search-cancel-button,
.c7 .c10::-webkit-search-results-button,
.c7 .c10::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c4 {
  color: #CC1F36;
}

.c1 .c10 {
  width: 100%;
}

.c1 {
  width: 100%;
}

.c8 {
  background-image: url('data:image/svg+xml;base64,CjxzdmcKICB3aWR0aD0iMjQiCiAgaGVpZ2h0PSIyNCIKICB2aWV3Qm94PSIwIDAgMjQgMjQiCiAgZmlsbD0ibm9uZSIKICB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciCj4KICA8cGF0aAogICAgZD0iTTcuNDEgOC41ODk4NEwxMiAxMy4xNjk4TDE2LjU5IDguNTg5ODRMMTggOS45OTk4NEwxMiAxNS45OTk4TDYgOS45OTk4NEw3LjQxIDguNTg5ODRaIgogICAgZmlsbD0iIzcwNzc4MSIKICAvPgo8L3N2Zz4=');
  background-repeat: no-repeat,repeat;
  background-position: right .5rem top calc(.5rem + 2px),0 0;
  background-size: 1rem,100%;
  padding-right: calc(2 * .5rem + 1rem);
}

.c8 .c10 {
  cursor: default;
}

.c8 .c12::after {
  content: ' ';
  border-right: 1px solid #DEE1E5;
  height: 1.5rem;
  width: 0.5rem;
  pointer-events: none;
}

<div
  className="c0 c1 "
>
  <div
    className="c2"
  >
    <label
      className="c3"
      color="palette.charcoal700"
      fontSize="xsmall"
      fontWeight="semiBold"
      htmlFor="thumbs-up"
    >
      👍
      <span
        aria-hidden="true"
        className="c4"
      >
         
        *
      </span>
    </label>
  </div>
  <div
    className="c0"
  >
    <div
      className=""
    >
      <div
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-owns="listbox-thumbs-up"
        className="c5 "
        display="flex"
        id="thumbs-up"
        name="thumbsUp"
        required={true}
        role="combobox"
      >
        <div
          className="c6 c7 c8"
          fontSize="small"
          onClick={[Function]}
          onMouseDown={[Function]}
          width="100%"
        >
          <input
            aria-autocomplete="both"
            autoComplete="off"
            className="c9 c10 c11"
            id="listbox-thumbs-up"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            readOnly={true}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FieldSelect supports labelWeight 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  border-radius: 0.25rem;
  border: solid 1px;
  border-color: #DEE1E5;
  width: 100%;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-right: 0.25rem;
  font-size: 0.875rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  color: #343C42;
  margin-right: 0.5rem;
  font-weight: 400;
  font-size: 0.75rem;
  display: inline-block;
}

.c8 {
  height: 36px;
}

.c8:hover {
  border-color: #C1C6CC;
}

.c8:focus,
.c8:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c10 {
  border-radius: 0.25rem;
  border: solid 1px;
  border-color: #DEE1E5;
  height: 36px;
  padding-right: 0.75rem;
  padding-left: 0.75rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  color: #343C42;
}

.c10:focus {
  outline: none;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
}

.c6:hover {
  border-color: #C1C6CC;
}

.c6:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c6 .c9 {
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  box-shadow: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
  height: calc(36px - 6px);
}

.c6 .c9::-webkit-search-decoration,
.c6 .c9::-webkit-search-cancel-button,
.c6 .c9::-webkit-search-results-button,
.c6 .c9::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1 .c9 {
  width: 100%;
}

.c1 {
  width: 100%;
}

.c7 {
  background-image: url('data:image/svg+xml;base64,CjxzdmcKICB3aWR0aD0iMjQiCiAgaGVpZ2h0PSIyNCIKICB2aWV3Qm94PSIwIDAgMjQgMjQiCiAgZmlsbD0ibm9uZSIKICB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciCj4KICA8cGF0aAogICAgZD0iTTcuNDEgOC41ODk4NEwxMiAxMy4xNjk4TDE2LjU5IDguNTg5ODRMMTggOS45OTk4NEwxMiAxNS45OTk4TDYgOS45OTk4NEw3LjQxIDguNTg5ODRaIgogICAgZmlsbD0iIzcwNzc4MSIKICAvPgo8L3N2Zz4=');
  background-repeat: no-repeat,repeat;
  background-position: right .5rem top calc(.5rem + 2px),0 0;
  background-size: 1rem,100%;
  padding-right: calc(2 * .5rem + 1rem);
}

.c7 .c9 {
  cursor: default;
}

.c7 .c11::after {
  content: ' ';
  border-right: 1px solid #DEE1E5;
  height: 1.5rem;
  width: 0.5rem;
  pointer-events: none;
}

<div
  className="c0 c1 "
>
  <div
    className="c2"
  >
    <label
      className="c3"
      color="palette.charcoal700"
      fontSize="xsmall"
      fontWeight="normal"
      htmlFor="thumbs-up"
    >
      👍
    </label>
  </div>
  <div
    className="c0"
  >
    <div
      className=""
    >
      <div
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-owns="listbox-thumbs-up"
        className="c4 "
        display="flex"
        id="thumbs-up"
        name="thumbsUp"
        role="combobox"
      >
        <div
          className="c5 c6 c7"
          fontSize="small"
          onClick={[Function]}
          onMouseDown={[Function]}
          width="100%"
        >
          <input
            aria-autocomplete="both"
            autoComplete="off"
            className="c8 c9 c10"
            id="listbox-thumbs-up"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            readOnly={true}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
